@@ -1,5 +1,9 @@
 This ChangeLog describes the important changes of each svn commit.
 
+r1439 (2010-09-21):
+
+Put the definition of inline member functions outside the class definition.
+
 r1438 (2010-09-21):
 
 Replace f(void) by f() in function declarations (f(void) has no meaning in
